Fix overlapping elements on small window sizes

--- a/student/src/App.css
+++ b/student/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
 .card {
@@ -31,7 +34,6 @@
 
 .inputs {
   display: flex;
-  height: 12vh;
   flex-direction: column;
   justify-content: space-evenly;
 }
